# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  render.yaml  render.yml  settings.toml
.github/workflows/: general.yml
migrations/: 20230616090820_create_subscriptions_table.sql  20230711091638_make_status_not_null_in_subscriptions.sql  20230711091922_create_subscription_tokens_table.sql  20230720110437_create_users_table.sql
scripts/: init_db.sh
settings/: base.toml  local.toml  production.toml
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs  subscriptions.rs
tests/it/: health_check.rs  helpers.rs  init.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
