[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Saboor <msaboor35@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
anyhow = "1.0.72"
claims = "0.7.1"
config = "0.13.3"
fake = "2.6.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.102"
serde_urlencoded = "0.7.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.0", features = ["v4"] }
validator = "0.16.1"
wiremock = "0.5.19"

[dependencies.sqlx]
version = "0.7.0"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["registry", "env-filter"]
